--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <body>
         <div id="map"></div>
         <script>
-            var map = L.map('map').setView([51.505, -0.09], 50);
+            var map = L.map('map').setView([26.368320, -80.097400], 50);
             L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
                 maxZoom: 19,
                 attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-            }).addTo(map);</script>
+            }).addTo(map);
+            L.marker([26.368320, -80.097400]).addTo(map);
+        </script>
     </body>
 </html>
